infrastructure/poptart/infra-stage3/keycloak/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak
spec:
  hostnames:
    - keycloak.gangsterkitties.com
  parentRefs:
    - name: cilium-gateway
      namespace: cilium
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /realms/
        - path:
            type: PathPrefix
            value: /resources/
        - path:
            type: PathPrefix
            value: /.well-known/
      backendRefs:
        - name: keycloak-service
          port: 8080
