infrastructure/poptart/infra-stage3/keycloak/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-admin
  annotations:
    external-dns.kubernetes.io/target: poptart-ingress.gangsterkitties.com
spec:
  ingressClassName: cilium
  rules:
    - host: keycloak-admin.gangsterkitties.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak-service
                port:
                  number: 8080
  tls:
    - hosts:
        - keycloak-admin.gangsterkitties.com
